--- a/site-plan.html
+++ b/site-plan.html
@@ -92,8 +92,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Why</a>
+        <a href="#">How</a>
       </nav>
       <hr>
       <h2>
@@ -104,10 +104,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Why <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          How  <!-- change this -->
         </div>
 
         <div class="top">
@@ -129,29 +129,42 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        The site will allow the custom input of the equipment 
+        you want and display the defense, health, prayer, strength, 
+        range, and magic bonuses of any combination of equipment. 
+        Runescape players are very practical people so the design will be 
+        simple to use in order to cut down on any words that have to be on the page.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="WDD\personal-site\images\rs3 logo.jpg" alt="image for homepage">
+        <img src="WDD\personal-site\images\gamer-logos.jpeg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>why</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Currently the game runescape doesn't have any good, public tools 
+        to create equipment builds that display the stats of the equipment. 
+        The only thing that is commonly used is the wiki that shows the stats 
+        of completed sets of armor. This works for some cases but sometimes 
+        you will be mixing and matching equipment from different sets of armor. 
+        The only other way to do this would be to buy the equipment in game 
+        which can be very expensive or do all the calculations yourself wasting time.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="#" alt="image for why">
+        <img src="WDD\personal-site\images\Runescape_Database_Wireframe.png" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>how</h3>
       <p>
-        [Written copy for the Page 3 here]
+        The site will use an sql database I created and it will pull from the database
+        to get all the data for the equipment. The User will only need to know the name 
+        of the equipment they want to wear and will be able to use a dropdown menu/search bar 
+        to find any piece they want to see.
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>Images for the How</p>
+        <img src="WDD\personal-site\images\database diagram.PNG" alt="image for page3">
+        <img src="WDD\personal-site\images\Database inserts.PNG" alt="image for page3">
 
       </ul>
       <hr>
