--- a/site-plan.html
+++ b/site-plan.html
@@ -10,9 +10,9 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>Runescape Armor Site Plan</h1>
+      <h2>Bryson Williams</h2>
+      <h2>WDD 130-02</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -176,21 +176,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="\images\RSHome.PNG" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Sets</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="\images\Runescape_Database_Wireframe.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Pieces</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Shows a close up of any single item selected from the dropdown along with its stats
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="\images\pieces-wireframe.PNG" alt="page 3 wireframe">
     </main>
   </body>
 
