fixed wireframe paths

--- a/site-plan.html
+++ b/site-plan.html
@@ -178,19 +178,19 @@
       <p>         
         
       </p>
-      <img src="\images\RSHome.PNG" alt="home page wireframe">
+      <img src="images\RSHome.PNG" alt="home page wireframe">
 
       <h3>Sets</h3>
       <p>         
         
       </p>
-      <img src="\images\Runescape_Database_Wireframe.png" alt="page 2 wireframe">
+      <img src="images\Runescape_Database_Wireframe.png" alt="page 2 wireframe">
 
       <h3>Pieces</h3>
       <p>         
         Shows a close up of any single item selected from the dropdown along with its stats
       </p>
-      <img src="\images\pieces-wireframe.PNG" alt="page 3 wireframe">
+      <img src="images\pieces-wireframe.PNG" alt="page 3 wireframe">
     </main>
   </body>
 
