--- a/site-plan.html
+++ b/site-plan.html
@@ -21,15 +21,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>As a gamer I've played many games. It's to the point where I wouldn't be able to remember most of them.
-           The website I will create will let you add an entry with the name and genres of the game
-            along with what you rate it and any notes you want to add about your experience with it.
-            It will include a very easy to use search function that will allow you to look through your games
-            by filtering by genre or searching for a specific title of a game.</p>  <!-- change this -->
+      <p>Currently the game runescape doesn't have any good, public tools 
+        to create equipment builds that display the stats of the equipment. 
+        The only thing that is commonly used is the wiki that shows the stats 
+        of completed sets of armor. This works for some cases but sometimes 
+        you will be mixing and matching equipment from different sets of armor. 
+        The only other way to do this would be to buy the equipment in game 
+        which can be very expensive or do all the calculations yourself wasting time.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>People who play RuneScape that want to check the stats of equipment without buying it themselves.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
@@ -49,13 +51,13 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      Palette URL: <a href="https://coolors.co/383f51-137547-a1e887-8ee3ef-f1bf98" target="_blank">https://coolors.co/383f51-137547-a1e887-8ee3ef-f1bf98</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">[#8ee3ef]</td><td class="secondary">[#a1e887]</td><td class="accent1">[#f1bf98]</td><td class="accent2"></td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -69,7 +71,7 @@
         Heading Font: [Font Name here]  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Lucida Console Courier New monospace;  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -92,8 +94,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Why</a>
-        <a href="#">How</a>
+        <a href="#">Armor sets</a>
+        <a href="#">Pieces</a>
       </nav>
       <hr>
       <h2>
