add picture getting to function made funtions into 1

--- a/pieces.html
+++ b/pieces.html
@@ -26,7 +26,7 @@
     </header>
         <span id=statgrid>
             <p class="gridelement">defence</p>
-            <p id="defence" class="gridelement"></p> <!-- These "float" place holder values will be pulled from a json file -->
+            <p id="defence" class="gridelement"></p> <!-- These values are pulled from the json file -->
             <p  class="gridelement">health</p>
             <p id="health" class="gridelement"></p>
             <p  class="gridelement">prayer</p>
@@ -38,6 +38,7 @@
             <p  class="gridelement">magic</p>
             <p id="magic" class="gridelement"></p>
         </span>
+        <img id="equip" src="" alt="equipment">
         <label for="table">table:</label>
         <input type="number" id="table" name="table"><br><br>
         <label for="armor">armor:</label>
