modified img getting

--- a/pieces.html
+++ b/pieces.html
@@ -38,7 +38,7 @@
             <p  class="gridelement">magic</p>
             <p id="magic" class="gridelement"></p>
         </span>
-        <img id="equip" src="" alt="equipment">
+        <img id="equip" src="./images/" alt="equipment">
         <label for="table">table:</label>
         <input type="number" id="table" name="table"><br><br>
         <label for="armor">armor:</label>
