added set functionality and pictures

--- a/pieces.html
+++ b/pieces.html
@@ -38,13 +38,9 @@
             <p  class="gridelement">magic</p>
             <p id="magic" class="gridelement"></p>
         </span>
-        <img id="equip" src="./images/" alt="equipment">
-        <label for="table">table:</label>
-        <input type="number" id="table" name="table"><br><br>
+        <img id="equip" src="" alt="equipment">
         <label for="armor">armor:</label>
         <input type="text" id="armor" name="armor"><br><br>
-        <label for="armor">stat:</label>
-        <input type="text" id="stat" name="stat"><br><br>
         <input type = "button" onclick = "getStats()" value = "Display">
         <!-- <img class="itemdisp" src="images/abby whip.png" alt="abby whip"> Image name will also be pulled from json file -->
         <div>
