equip select  dropdown menu

--- a/sets.html
+++ b/sets.html
@@ -41,21 +41,40 @@
             <p id="fullMagic" class="gridelement">float</p>
         </span>
         <label for="head">head:</label>
-        <input type="text" id="head" name="head"><br><br>
+        <select name="head" id="head">
+            <option value="virtusMask">Virtus Mask</option>
+            <option value="bronzeFullHelm">Bronze Full Helm</option>
+        </select><br><br>
         <label for="back">back:</label>
-        <input type="text" id="back" name="back"><br><br>
+        <select name="back" id="back">
+            <option value="fireCape">Fire Cape</option>
+            <option value="saradominCape">Saradomin Cape</option>
+        </select><br><br>
         <label for="neck">neck:</label>
-        <input type="text" id="neck" name="neck"><br><br>
+        <select name="neck" id="neck">
+            <option value="amuletOfFury">Amulet of Fury</option>
+            <option value="amuletOfPower">Amulet of Power</option>
+        </select><br><br>
         <label for="torso">torso:</label>
-        <input type="text" id="torso" name="torso"><br><br>
+        <select name="torso" id="torso">
+            <option value="virtusRobeTop">Virtus Robe Top</option>
+        </select><br><br>
         <label for="legs">legs:</label>
-        <input type="text" id="legs" name="legs"><br><br>
+        <select name="legs" id="legs">
+            <option value="virtusRobeLegs">Virtus Robe Legs</option>
+        </select><br><br>
         <label for="hands">hands:</label>
-        <input type="text" id="hands" name="hands"><br><br>
+        <select name="hands" id="hands">
+            <option value="virtusGloves">Virtus Gloves</option>
+        </select><br><br>
         <label for="feet">feet:</label>
-        <input type="text" id="feet" name="feet"><br><br>
+        <select name="feet" id="feet">
+            <option value="virtusBoots">Virtus Boots</option>
+        </select><br><br>
         <label for="ring">ring:</label>
-        <input type="text" id="ring" name="ring"><br><br>
+        <select name="ring" id="ring">
+            <option value="seersRing">Seer's Ring</option>
+        </select><br><br>
 
         <input type = "button" onclick = "statTotals()" value = "Display">
 
