--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Runescape armory home</title>
+    <title>RuneScape armory home</title>
     <link type="text/css" rel="stylesheet" href="styles/home.css">
 </head>
 <body>
@@ -56,4 +56,7 @@
     </div>
 </div>
 </body>
+<footer>
+    <a href="site-plan.html">site plan</a>
+</footer>
 </html>
