--- a/pieces.html
+++ b/pieces.html
@@ -41,11 +41,9 @@
         <img id="equip" src="" alt="equipment">
         <label for="armor">armor:</label>
         <input type="text" id="armor" name="armor"><br><br>
-        <input type = "button" onclick = "getStats()" value = "Display">
+        <input type = "button" id="display" onclick = "getStats()" value = "Display">
+        <p>Test with "fireCape" and "virtusMask"</p>
         <!-- <img class="itemdisp" src="images/abby whip.png" alt="abby whip"> Image name will also be pulled from json file -->
-        <div>
-            dropdown menu/searchbar
-        </div>
 </div>
 </body>
 <footer>
