sets css and footer

--- a/sets.html
+++ b/sets.html
@@ -119,10 +119,32 @@
             <img id="feetimg" class="equipgridelement" src="./images/emptyFeet.png" alt="filler img">
             <img id="ringimg" class="equipgridelement" src="./images/emptyRing.png" alt="filler img">
         </span>
+        <span id="instructions">
+            To use the "Sets" page select each piece of armor
+            you want to see the stats of and click display
+            to show the image of each of the pieces and the
+            combined stats of all the pieces of armor</span>
     </div>
 </div>
 </body>
 <footer>
+    <span>
     <a href="site-plan.html">site plan</a>
+    </span>
+    <div class="social">
+        <a href="https://github.com/Broncelino" target="_blank">
+            <img src="images/github.png" alt="Github icon">
+        </a>
+        <a href="https://facebook.com" target="_blank">
+            <img src="images/facebook.png" alt="fb icon">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="images/twitter.png" alt="twitter icon">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="images/instagram.png" alt="instagram icon">
+        </a>
+        
+    </div>
 </footer>
 </html>
