png to PNG for first image

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             range, and magic bonuses of any combination of equipment. <br>
             Runescape players are very practical people so the design will be 
             simple to use in order to cut down on any words that have to be on the page.</p>
-            <span><img class="what" src="images/rs-stats.png"></span>
+            <span><img class="what" src="images/rs-stats.PNG"></span>
     </div>
     <div>
         <h1>Why?</h1>
