--- a/pieces.html
+++ b/pieces.html
@@ -38,15 +38,36 @@
             <p  class="gridelement">magic</p>
             <p id="magic" class="gridelement"></p>
         </span>
-        <img id="equip" src="" alt="equipment">
+        <img id="equip" src="" alt="">
         <label for="armor">armor:</label>
         <input type="text" id="armor" name="armor"><br><br>
         <input type = "button" id="display" onclick = "getStats()" value = "Display">
         <p>Test with "fireCape" and "virtusMask"</p>
+        <span id="instructions">To select a piece of equipment type the piece you want to see the stats of
+            type the full name of the item in camelCase and click the display button.
+        </span>
         <!-- <img class="itemdisp" src="images/abby whip.png" alt="abby whip"> Image name will also be pulled from json file -->
+
 </div>
 </body>
 <footer>
+    <span>
     <a href="site-plan.html">site plan</a>
+    </span>
+    <div class="social">
+        <a href="https://github.com/Broncelino" target="_blank">
+            <img src="images/github.png" alt="Github icon">
+        </a>
+        <a href="https://facebook.com" target="_blank">
+            <img src="images/facebook.png" alt="fb icon">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="images/twitter.png" alt="twitter icon">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="images/instagram.png" alt="instagram icon">
+        </a>
+        
+    </div>
 </footer>
 </html>
